Adição tela Quem Somos

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
 
         <div class="buttons">
-            <a href="https://wa.link/4zh3ee" class="button">
+            <a href="https://wa.link/1p3wbj" class="button">
                 <img src="logowhatsapp.svg" alt="whatsapp-logo" class="icon">
-                <p class="title-button">Agende sua aula ✅</p>
+                <p class="title-button">Agende sua aula</p>
             </a>       
 
             <!-- <a href="tiktok.com/@performancebynan" class="button">
@@ -28,13 +28,13 @@
             </a> -->
 
             <a href="https://www.google.com.br/maps/place/Arena+Fregola/@-22.9307732,-43.3895174,13z/data=!4m10!1m2!2m1!1sarena+fregola!3m6!1s0x9bd99a4955d9cb:0x8808b09e5936646a!8m2!3d-22.9571082!4d-43.3359589!15sCg1hcmVuYSBmcmVnb2xhkgEOYXRobGV0aWNfZmllbGTgAQA!16s%2Fg%2F11fm_780r8?entry=ttu&g_ep=EgoyMDI0MTAyMy4wIKXMDSoASAFQAw%3D%3D" class="button">
-                <img src="location_pin.png" alt="tiktok-logo" class="icon">
-                <p class="title-button">Onde estamos </p>
+                <img src="location_icon.svg" alt="tiktok-logo" class="icon">
+                <p class="title-button">Onde estamos?</p>
             </a>
 
             <a href="./quemsomos.html" class="button">
-                <img src="beach_tennis_ball.png" alt="tiktok-logo" class="icon">
-                <p class="title-button">Quem somos ? </p>
+                <img src="ball_icon.svg" alt="tiktok-logo" class="icon-ball">
+                <p class="title-button">Quem somos? </p>
             </a>
         </div>
 
