Troca da logo do designer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="footer">
             <a href="#" class="assinatura">Design by:</a>
             <a href="https://www.instagram.com/gui_caldas02/">
-                <img src="./gc_dev.png" alt="gc-dev" class="gc-dev">
+                <img src="./gctechsolutions.svg" alt="gc-dev" class="gc-dev">
             </a>
         </div>
 
